--- a/Projects_Style.css
+++ b/Projects_Style.css
@@ -264,3 +264,15 @@ img{
 .dl-section{
     padding-top: 2em;
 }
+
+section.written{
+    min-height: 50vh;
+    color: #ffffff;
+    background-color: #2e313b;
+    display: flex;
+    flex-direction: column;
+    padding-left: 3em;
+    padding-right: 3em;
+    align-items: center;
+    justify-content: center;
+}
